--- a/package.json
+++ b/package.json
@@ -6,31 +6,30 @@
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.2.3",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
+    "node-sass": "^8.0.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-countup": "^6.4.0",
-    "react-dom": "^17.0.2",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-masonry-component": "^6.3.0",
     "react-modal-video": "^1.2.10",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
-    "react-slick": "^0.28.1",
+    "react-slick": "^0.29.0",
     "react-stickynode": "^4.1.0",
     "react-swiper": "^0.1.5",
     "react-toastify": "^9.0.3",
     "react-visibility-sensor": "^5.1.1",
+    "reaptcha": "^1.12.1",
     "sass": "^1.56.1",
-    "simple-react-lightbox": "^3.6.9-0",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^7.4.1",
-    "web-vitals": "^1.1.2"
+    "swiper": "^8.4.5",
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
