--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jtt",
-  "homepage": "https://michinom.github.io/jtt-autotech",
+  "homepage": "https://michinom.github.io/jtt-autotech/",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
